--- a/weapp/apps/customerized_apps/shvote/templates/editor/shvote_registrators.html
+++ b/weapp/apps/customerized_apps/shvote/templates/editor/shvote_registrators.html
@@ -1,12 +1,15 @@
 {% extends "content_base_v2.html" %}
 {% load apps_filter %}
 
+{% block css%}
 	<style>
 		.tl.pl25 img{
 			height: 60px;
 			width: 60px;
 		}
 	</style>
+{% endblock%}
+
 {% block content-panel %}
 <div class="xui-ShvoteParticipancesAppPage xui-appPage-commonStyle">
 	<div class="relative">
@@ -38,7 +41,8 @@
 		<div class="xui-i-col">
 			<div class="ml80">
 				<a class="btn btn-primary mr30 xa-search xui-fontBold" href="javascript:void(0);">查&nbsp;&nbsp;&nbsp;&nbsp;询</a>
-				<a class="btn btn-default xa-reset xui-fontBold" href="javascript:void(0);">批量导出</a>
+				<a class="btn btn-default xa-export xui-fontBold" href="javascript:void(0);">批量导出</a>
+				<a id="export_href" style="display: none ">DownloadXLS</a>
 			</div>
 		</div>
 	</div>
@@ -104,7 +108,7 @@
 					class="tl pl25"
 					style="width:250px; height:60px;"
 				>
-					<img style="width:60px; height:60px;" src="${item.icon}" />
+					<img src="${item.icon}" />
 					${item.name}
 				</td>
 				<td>
@@ -258,8 +262,6 @@ $(document).ready(function() {
 		var table = $('div[data-ui-role="advanced-table"]').data('view');
 		var $el = $(event.target)
 		var ids = table.getAllSelectedDataIds();
-		xwarn('****** DD*******');
-		xwarn(ids);
 		W.requireConfirm({
 			$el: $el,
 			width: 420,
@@ -286,6 +288,39 @@ $(document).ready(function() {
 			}
 		});
 	});
+
+	//export
+	$('.xa-export').click(function(event){
+		W.getLoadingView();
+		var participant_name = $.trim($('[name="participant_name"]').val());
+		var status = $.trim($('[name="status"]').val());
+		var export_id =window.location.search.split('?id=')[1];
+		W.getApi().call({
+			method: 'get',
+			app: 'apps/shvote',
+			resource: 'shvote_registrators_export',
+			args: {
+				'id': export_id,
+				'participant_name': participant_name,
+				'status':status
+			},
+			success: function(resp){
+				if(resp.code == 200){
+					$('#export_href').prop({
+						'href': resp.download_path,
+						'download': resp.filename
+					}).get(0).click();
+
+				}
+				console.log("导出成功");
+			},
+			error: function(error){
+				console.log('导出失败');
+			}
+		});
+	});
+
+
 
 });
 </script>
