--- a/weapp/apps/customerized_apps/shvote/templates/editor/shvote_registrators.html
+++ b/weapp/apps/customerized_apps/shvote/templates/editor/shvote_registrators.html
@@ -50,7 +50,7 @@
 	<div class="panel panel-default xui-tableBox">
 		<div class="panel-header clearfix">
 			<label for="bottomSelectAll" class="xui-selectAll ml12">
-				<input type="checkbox" id="bottomSelectAll" class="xa-selectAll">全选
+				<input type="checkbox" id="bottomSelectAll" class="xa-selectAll">本页全选
 			</label>
 			<a href="javascript:void(0);" class="btn btn-default ml10 xa-batchReview">批量审核通过</a>
 			<a href="javascript:void(0);" class="btn btn-default ml10 xa-batchDelete">批量删除</a>
@@ -73,6 +73,11 @@
 			data-selecttable-tr='xa-selectTr'
 		>
 		</div>
+		<div class="panel-header clearfix xui-batchbtn">
+			<label for="bottomSelectAll" class="xui-selectAll ml12">
+				<input type="checkbox" id="bottomSelectAll" class="xa-selectAll">本页全选
+			</label>
+		</div>		
 	</div>
 </div>
 {% endblock %}
