可以按照编号搜索

--- a/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote.html
+++ b/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote.html
@@ -283,6 +283,8 @@
 			var search_name = $('.wa-search-text').val();
 			if(search_name != ''){
 				getRankInfo(current_group,search_name);
+			}else{
+				getRankInfo(current_group,'');
 			}
 		});
         //展示参与统计
