订单打印 取消popup模式，直接打印

--- a/weapp/mall/templates/mall/editor/orders.html
+++ b/weapp/mall/templates/mall/editor/orders.html
@@ -691,9 +691,12 @@ $(document).ready(function() {
 			isBusy = 1;
 
 			getData(function (data) {
+
 				$('#order-print-pages-box').empty().append($.tmpl( "order-print-tmpl-src", data ));
 				$('#order-print-pages-box').show();
-				$('.order-print-page').printArea({mode:'popup',popWd:649,popHt:978,popTitle:data.orderList[0].orderTitle});
+				$('.order-print-page').printArea(
+//						{mode:'popup',popWd:649,popHt:978,popTitle:data.orderList[0].orderTitle}
+				);
 				isBusy = 0;
 			},function () {
 				isBusy = 0;
