--- a/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote_rank.html
+++ b/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote_rank.html
@@ -2,12 +2,66 @@
 
 {% block css %}
 <style type="text/css">
-
+	body{
+		background: #fff !important;
+	}
+	.wui-rank-groups{
+		font-size : 0;
+		padding: 10px 0;
+	}
+	.wui-rank-groups div{
+		font-size: 1rem;
+		display: inline-block;
+		width: 25%;
+		text-align: center;
+	}
+	.wui-rank-groups div.active{
+		color: red;
+		font-size: 1.2rem;
+	}
+	.wui-rank-table{
+		width: 100%;
+		border-collapse: collapse;
+    	border-spacing: 0;
+    	border-top: 1px solid #e1e1e1;
+	}
+	.wui-rank-table td,.wui-rank-table th{
+		text-align: center;
+		border-bottom: 1px solid #e1e1e1;
+		padding: 5px 0;
+	}
+	.wui-rank-table tbody tr td:nth-child(2){
+		width: 60%;
+	}
 </style>
 {% endblock %}
 
 {% block content-panel %}
-
+<div class="wui-rank-groups">
+	<div class="active">大学组</div>
+	<div>大学组</div>
+	<div>大学组</div>
+	<div>大学组</div>
+</div>
+<table class="wui-rank-table">
+	<thead>
+		<tr>
+			<th>排名</th>
+			<th>选手</th>
+			<th>票数</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td>1</td>			
+			<td>对，你没有看错！是史上最长的</td>
+			<td>
+				<div>2169票</div>
+				<div>编号:021</div>
+			</td>
+		</tr>
+	</tbody>
+</table>
 {% endblock %}
 
 {% block js %}
