--- a/templates/base.html
+++ b/templates/base.html
@@ -29,11 +29,10 @@
 		<script type="text/javascript" src="/static/lib/spin-1.3.js"></script>
 
 		<!-- react component -->
-		<script src="http://127.0.0.1:4188/static/bundle.js"></script>
+		<script src="{{bundle_host}}/bundle.js"></script>
 
 		<script type="text/javascript" src="/static/js/system.js"></script>
 		<script type="text/javascript" src="/static/js/resource.js"></script>
-		<script type="text/javascript" src="/static/js/validate.js"></script>
  
 		{% block base_js %}{% endblock %}
 	</body>
