--- a/card/templates/card/ordinary_rules.html
+++ b/card/templates/card/ordinary_rules.html
@@ -4,7 +4,7 @@
 <script type="text/javascript">
 	W.breadcrumb = [{
 		name: '微众卡',
-		href: '/outline/datas/'
+		href: '/card/ordinary_cards/'
 	}, {
 		name: '通用卡',
 		href: '#'
